# grapevine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
lib/: Cargo.toml  README.md
lib/src/: app.rs  channel.rs  handler.rs  lib.rs
lib/src/protocol/: aes_handshake.rs  message.rs
src/: app.rs  channel.rs  events.rs  handler.rs  listener.rs  main.rs  message.rs  packet.rs  settings.rs  ui.rs  widgets.rs
src/app/: app.rs  channel.rs  events.rs  handler.rs  listener.rs  mod.rs
src/components/: channel_modal.rs  mod.rs  modal.rs  settings_modal.rs
src/lib/: app.rs  channel.rs  events.rs  listener.rs  mod.rs
src/lib/protocol/: handshake.rs  io.rs  mod.rs  packet.rs  rsa_handshake.rs
src/modals/: channel_accept_aes.rs  channel_accept_rsa.rs  channel_creation.rs  channel_desc_edit.rs  channel_recreation.rs  mod.rs  modal.rs  settings.rs
src/protocol/: aes_handshake.rs  handshake.rs  io.rs  message.rs  mod.rs  packet.rs  rsa_handshake.rs
