[package]
name = "grapevine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
bitcode = { version = "0.6.7", features = ["serde"] }
eframe = {version="0.32.1", features=["persistence"]}
egui = {version="0.32.1", features=[]}
integer-encoding = "4.0.2"
openssl = {version="0.10.73", features=["vendored"]}
serde = "1.0.219"
derive_more = { version = "2.0.1", features = ["from", "display"] }
egui-notify = "0.20.0"
base64 = "0.22.1"
serde_json = "1.0.143"
