[package]
name = "grapevine_lib"
version = "0.1.0"
edition = "2024"
authors = ["TCA"]
description = "Grapevine backend"
readme = "README.md"
repository = "https://github.com/TCA166/grapevine"
license = "GPL-3.0-only"
keywords = ["peer-to-peer", "end-to-end-encryption", "messanging", "server"]
categories = []


[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
bitcode = { version = "0.6.7", features = ["serde"] }
integer-encoding = "4.0.2"
openssl = { version = "0.10.73", features = ["vendored"] }
serde = "1.0.219"
derive_more = { version = "2.0.1", features = ["from", "display", "error"] }

[dev-dependencies]
serde_json = "1.0.143"

[lib]
path = "src/lib.rs"
